# public/swagger-ui/college-app-api-spec.json
@@ -382,20 +382,10 @@
                         "type": "integer"
                     },
                     {
-                        "name": "filters",
-                        "in": "body",
-                        "description": "Request filters",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "filters": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Filter"
-                                    }
-                                }
-                            }
-                        }
+                        "name": "filters[attr]",
+                        "in": "query",
+                        "description": "Request filters (ex. filters[id][]=1&filters[id][]=10&filters[gender]=male)",
+                        "type": "string"
                     }
                 ],
                 "tags": [
@@ -509,20 +499,10 @@
                         "type": "integer"
                     },
                     {
-                        "name": "filters",
-                        "in": "body",
-                        "description": "Request filters",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "filters": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Filter"
-                                    }
-                                }
-                            }
-                        }
+                        "name": "filters[attr]",
+                        "in": "query",
+                        "description": "Request filters (ex. filters[id][]=1&filters[id][]=10&filters[gender]=male)",
+                        "type": "string"
                     }
                 ],
                 "tags": [
@@ -677,20 +657,10 @@
                         "type": "integer"
                     },
                     {
-                        "name": "filters",
-                        "in": "body",
-                        "description": "Request filters",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "filters": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Filter"
-                                    }
-                                }
-                            }
-                        }
+                        "name": "filters[attr]",
+                        "in": "query",
+                        "description": "Request filters (ex. filters[id][]=1&filters[id][]=10&filters[type]=1)",
+                        "type": "string"
                     }
                 ],
                 "tags": [
@@ -767,20 +737,10 @@
                         "type": "integer"
                     },
                     {
-                        "name": "filters",
-                        "in": "body",
-                        "description": "Request filters",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "filters": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/definitions/Filter"
-                                    }
-                                }
-                            }
-                        }
+                        "name": "filters[attr]",
+                        "in": "query",
+                        "description": "Request filters (ex. filters[id][]=1&filters[id][]=10&filters[type]=1)",
+                        "type": "string"
                     }
                 ],
                 "tags": [
@@ -861,23 +821,77 @@
                     "type": "integer",
                     "description": "Application ID"
                 },
-                "user": {
-                    "$ref": "#/definitions/User"
+                "applicant": {
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/User"
+                        }
+                    }
                 },
                 "interval": {
-                    "$ref": "#/definitions/Interval"
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/Interval"
+                        }
+                    }
                 },
                 "middle_school": {
-                    "$ref": "#/definitions/MiddleSchool"
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/MiddleSchool"
+                        }
+                    }
                 },
-                "education_type": {
-                    "$ref": "#/definitions/EducationType"
+                "education": {
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/EducationType"
+                        }
+                    }
+                },
+                "graduation": {
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/GraduationType"
+                        }
+                    }
                 },
                 "profession": {
-                    "$ref": "#/definitions/Profession"
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/Profession"
+                        }
+                    }
                 },
                 "nationality": {
-                    "$ref": "#/definitions/Nationality"
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/Nationality"
+                        }
+                    }
+                },
+                "citizen": {
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/Citizen"
+                        }
+                    }
+                },
+                "country": {
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/Country"
+                        }
+                    }
                 },
                 "middle_name": {
                     "type": "string",
@@ -989,6 +1003,19 @@
                 }
             }
         },
+        "Citizen": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "description": "Citizen ID"
+                },
+                "name": {
+                    "type": "string",
+                    "description": "Citizen name"
+                }
+            }
+        },
         "Profession": {
             "type": "object",
             "properties": {
@@ -1028,6 +1055,19 @@
                 }
             }
         },
+        "GraduationType": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "description": "Graduation type ID"
+                },
+                "name": {
+                    "type": "string",
+                    "description": "Graduation type name"
+                }
+            }
+        },
         "Nationality": {
             "type": "object",
             "properties": {
@@ -1042,6 +1082,23 @@
                 "descriptio": {
                     "type": "string",
                     "description": "Nationality description"
+                }
+            }
+        },
+        "Country": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "description": "Country ID"
+                },
+                "name": {
+                    "type": "string",
+                    "description": "Country name"
+                },
+                "eu": {
+                    "type": "boolean",
+                    "description": "Flag showing if country is from EU"
                 }
             }
         },
@@ -1081,7 +1138,12 @@
                     "description": "Number of students that filed the application for this program"
                 },
                 "faculty": {
-                    "$ref": "#/definitions/Faculty"
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/Faculty"
+                        }
+                    }
                 }
             }
         },
@@ -1101,10 +1163,20 @@
                     "description": "Faculty's acronym"
                 },
                 "university": {
-                    "$ref": "#/definitions/University"
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/University"
+                        }
+                    }
                 },
                 "district": {
-                    "$ref": "#/definitions/District"
+                    "type": "object",
+                    "properties": {
+                        "data": {
+                            "$ref": "#/definitions/District"
+                        }
+                    }
                 }
             }
         },
@@ -1157,23 +1229,6 @@
                 "message": {
                     "type": "string",
                     "description": "Default HTTP response based on the status code"
-                }
-            }
-        },
-        "Filter": {
-            "type": "object",
-            "properties": {
-                "attribute": {
-                    "type": "string",
-                    "description": "attribute to filter by"
-                },
-                "value": {
-                    "type": "string",
-                    "description": "attribute value"
-                },
-                "relation": {
-                    "type": "string",
-                    "description": "can be gt, eq, lt, ge, le. Default = eq"
                 }
             }
         },
